home gallery issue

--- a/src/sass/theme/_child_theme.scss
+++ b/src/sass/theme/_child_theme.scss
@@ -773,7 +773,7 @@ body.home {
   }
 }
 
-.home-gallery.wp-block-gallery.wp-block-gallery-15 {
+.home-gallery {
   gap: 64px;
 
   figure.wp-block-image:not(#individual-image) {
